Task card dropdown menu

--- a/ProjectPulse.Web/Components/Pages/TaskCard.razor
+++ b/ProjectPulse.Web/Components/Pages/TaskCard.razor
@@ -5,26 +5,32 @@
             Low
         </div>
         <div class="task-buttons">
-            <div class="projects-button-item" @onclick="() => DeleteTask(Id)">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+            <div class="dropdown-toggle-button" @onclick="ToggleDropdown">
+                <p>...</p>
             </div>
-            @if (!IsDone)
-            {
-                <div class="projects-button-item" @onclick="() => AssignUser(Id)">
+            <div class="dropdown-menu @DropdownClass">
+                @if (!IsDone)
+                {
+                    <div class="dropdown-menu-item" @onclick="() => AssignUser(Id)">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4z" stroke="#787486" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M4 18c0-2.21 1.79-4 4-4h8c2.21 0 4 1.79 4 4v2H4v-2z" stroke="#787486" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p>Assign user</p>
+                    </div>
+                    <div class="dropdown-menu-item" @onclick="() => ChangeStatus(TaskStatuses.InProgress, Id)">
+                        <img src="img/editgray.svg" alt="">
+                        <p>Edit</p>
+                    </div>
+                }
+                <div class="dropdown-menu-item" id="delete" @onclick="() => DeleteTask(Id)">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M4 18c0-2.21 1.79-4 4-4h8c2.21 0 4 1.79 4 4v2H4v-2z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 6H5H21" stroke="#787486" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#787486" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
+                    <p>Delete</p>
                 </div>
-                <div class="projects-button-item" @onclick="() => ChangeStatus(TaskStatuses.InProgress, Id)">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M9 18L15 12L9 6" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </div>
-            }
+            </div>
         </div>
     </div>
     <div class="task-card-main">
@@ -81,6 +87,8 @@
     {
         ChangeStatusCallback.InvokeAsync((status, id));
         
+        ToggleDropdown();
+        
         StateHasChanged();
     }
     
@@ -90,5 +98,16 @@
     private void AssignUser(string id)
     {
         AssignUserCallback.InvokeAsync(id);
+        
+        ToggleDropdown();
+    }
+    
+    private bool _isDropdownOpen = false;
+
+    private string DropdownClass => _isDropdownOpen ? "show" : "";
+
+    private void ToggleDropdown()
+    {
+        _isDropdownOpen = !_isDropdownOpen;
     }
 }
