Added details to project page

--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -28,25 +28,53 @@
 <section class="projects-wrapper">
     <div class="projects-top">
         <div class="projects-top-head">
-            <h1>@_project.Name</h1>
-            <div class="projects-buttons">
-                <div class="projects-button-item" @onclick="ShowEditProjectModal">
-                    <img src="img/edit.svg" alt="">
+            <div class="projects-top-head-left">
+                <h1>@_project.Name</h1>
+                <div class="projects-buttons">
+                    <div class="projects-button-item" @onclick="ShowEditProjectModal">
+                        <img src="img/edit.svg" alt="">
+                    </div>
+                    <div class="projects-button-item">
+                        <img src="img/link.svg" alt="">
+                    </div>
+                    <div class="projects-button-item" @onclick="DeleteProject">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                 </div>
-                <div class="projects-button-item">
-                    <img src="img/link.svg" alt="">
+            </div>
+            <div class="projects-top-head-right">
+                <div class="projects-invite">
+                    <div class="task-column-icon projects-button-item">
+                        <img src="img/plus.svg" alt="" @onclick="ShowAddTaskModal">
+                    </div>
+                    <p>Invite</p>
                 </div>
-                <div class="projects-button-item" @onclick="DeleteProject">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                <div class="project-participants">
+                    <img src="img/participants.png" alt="">
                 </div>
             </div>
         </div>
         <div class="projects-top-footer">
-            <div class="project-description">
-                @_project.Description
+            <div class="projects-top-footer-left">
+                <div class="project-filter">
+                    <img src="img/filter.svg" alt="">
+                    <p>Filter</p>
+                    <img src="img/arrow-down.png" alt="">
+                </div>
+                <div class="project-filter">
+                    <img src="img/calendar.svg" alt="">
+                    <p>Today</p>
+                    <img src="img/arrow-down.png" alt="">
+                </div>
+            </div>
+            <div class="projects-top-footer-right">
+                <div class="project-filter">
+                    <img src="img/members.svg" alt="">
+                    <p>Share</p>
+                </div>
             </div>
         </div>
     </div>
