--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -101,7 +101,7 @@
                     </div>
                     <div class="task-column-right">
                         <div class="task-column-icon projects-button-item">
-                            <img src="img/plus.svg" alt="" @onclick="ShowAddTaskModal">
+                            <img src="img/plus.svg" alt="" class="add-task-btn" @onclick="ShowAddTaskModal">
                         </div>
                     </div>
                 </div>
