--- a/ProjectPulse.Web/Components/Layout/NavItem.razor
+++ b/ProjectPulse.Web/Components/Layout/NavItem.razor
@@ -1,7 +1,7 @@
 @inject IJSRuntime JS
 
 <div>
-    <NavLink href="@ToPage" class="sidebar-options-content-item" Match="NavLinkMatch.All" activeClass="sidebar-options-content-item-active" @onclick="HandleOptionTabClick">
+    <NavLink href="@ToPage" class="sidebar-options-content-item" Match="NavLinkMatch.All" activeClass="sidebar-options-content-item-active">
         <img src="@IconPath" alt="">
         <p>@Title</p>
     </NavLink>
@@ -15,9 +15,4 @@
     public string ToPage { get; set; } = string.Empty;
 
     [Parameter] public string IconPath { get; set; } = string.Empty;
-
-    private async Task HandleOptionTabClick()
-    {
-        await JS.InvokeVoidAsync("HandleOptionTabClick");
-    }
 }
