--- a/ProjectPulse.Web/Components/Components/TaskCard.razor.css
+++ b/ProjectPulse.Web/Components/Components/TaskCard.razor.css
@@ -108,9 +108,22 @@
     padding: 6px;
     font-weight: 500;
     font-size: 12px;
-    border-radius: 20%;
-    color: #5030E5;
-    background-color: rgba(80, 48, 229, 0.2);
+    border-radius: 10px;
+}
+
+.task-priority.Low {
+    color: #68B266;
+    background-color: rgba(131, 194, 157, 0.2);
+}
+
+.task-priority.Medium {
+    color: rgb(213, 141, 73);
+    background-color: rgba(223, 168, 116, 0.2);
+}
+
+.task-priority.High {
+    color: #D8727D;
+    background-color: rgba(216, 114, 125, 0.1);
 }
 
 .task-additional {
